--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ button {
 }
 
 h1 {
-  background-color: aquamarine;
+  background-color: #A1DA7C;
   margin: 0%;
   font-size: 3rem;
   text-align: center;
